aligned about-us pics (cole's is bugged), fixed logos

--- a/style.css
+++ b/style.css
@@ -488,8 +488,8 @@ td{
 
 }
 .profile-pic{
-  width: 95%;
-  height: 95%;
+  width: 250px;
+  height: 250px;
   padding: 10px;
 
 }
